# fx-ml-pipeline

./: .dockerignore  .editorconfig  .env.example  .env.monitoring  .env.monitoring.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_SUMMARY.txt  CODE_OF_CONDUCT.md  COMPLETE_PIPELINE_REPORT.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  DATA_DOWNLOAD_INSTRUCTIONS.md  DATA_DOWNLOAD_RESULTS.md  DATA_SHARING_GUIDE.md  DEMO.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  Dockerfile  FINAL_DATA_SUMMARY.md  FX_ML_Pipeline_Report_Word.md  FX_ML_Pipeline_Technical_Report.md  FX_ML_Pipeline_Technical_Report_Enhanced.md  INFRASTRUCTURE_UPDATES_FINBERT.md  LICENSE  MIGRATION_GUIDE.md  MODEL_LOADING_STATUS.md  Makefile  PIPELINE_STATUS.md  PIPELINE_TEST_RESULTS.md  QUICKSTART.md  README.md  README_HYBRID_NEWS_SCRAPER.md  REGRESSION_MODEL_STATUS.md  SETUP_ENVIRONMENT.md  Technical_Report_MLOps.md  analyze_data_coverage.py  convert_ndjson_to_json_files.py  create_group_assignment.py  (+30 more)
.claude/: settings.local.json
airflow_mlops/: .env  .gitignore  AIRFLOW_STRATEGY.md  Dockerfile  README.md  docker-compose.yml  init-airflow.sh  requirements.txt
archive_2025_11_07/: README.md
config/: drift_thresholds.json
configs/: combined_features.yaml  features.yaml  hybrid_news_sources.yaml  market_features.yaml  news_features.yaml  pairs.yaml
data_clean/: README.md  migration_summary.json
docker/: Dockerfile  Dockerfile.fastapi  Dockerfile.streamlit  docker-compose.full-stack.yml  docker-compose.yml
docs/: ARCHITECTURE.md  BUSINESS_VALUE.md  CLEANUP_SUMMARY.md  MLOPS_PLAN.md  (+12 more)
(+581 files in other folders)
